--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <script type = "text/javascript" 
+    src = "//dapi.kakao.com/v2/maps/sdk.js?appkey=51a856aa253cd9c687f6252c3b3a402a">
+    </script>
     <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Gugi&display=swap" rel="stylesheet">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
